use old index page for site

--- a/pages/plugin-simple-components.html
+++ b/pages/plugin-simple-components.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TailsJS - Components Plugin Test</title>    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>TailsJS - Components Plugin Test</title>    <link rel="stylesheet" href="../index.css">
     <script src="../tails.js" type="module"></script>
     <script src="../plugins/plugin-simple-components.js" type="module"></script>
     <style>
@@ -21,9 +20,8 @@
                     <h1 class="text-4xl font-bold text-purple-600 mb-2">TailsJS Components Plugin</h1>
                     <p class="text-gray-600">Common UI components based on theme values</p>
                 </div>
-                <nav class="flex gap-4">
-                    <a href="index.html" class="btn btn-outline">← Back to Main</a>
-                    <a href="animation.html" class="btn btn-secondary">🎬 Animations</a>
+                <nav class="flex gap-4">                    <a href="../index.html" class="btn btn-outline">← Back to Main</a>
+                    <a href="plugin-animation.html" class="btn btn-secondary">🎬 Animations</a>
                     <a href="plugin-icons.html" class="btn btn-secondary">🎨 Icons</a>
                 </nav>
             </div>
@@ -470,9 +468,8 @@
     <footer class="bg-white border-t mt-12 py-8">
         <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
             <p>TailsJS Components Plugin - Common UI components for modern web development</p>
-            <div class="mt-4 space-x-4">
-                <a href="index.html" class="text-blue-600 hover:text-blue-800 transition">← Back to Main Test Suite</a>
-                <a href="animation.html" class="text-purple-600 hover:text-purple-800 transition">🎬 View Animations</a>
+            <div class="mt-4 space-x-4">                <a href="../index.html" class="text-blue-600 hover:text-blue-800 transition">← Back to Main Test Suite</a>
+                <a href="plugin-animation.html" class="text-purple-600 hover:text-purple-800 transition">🎬 View Animations</a>
                 <a href="plugin-icons.html" class="text-green-600 hover:text-green-800 transition">🎨 View Icons</a>
             </div>
         </div>
