--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>TailsJS - Complete Test Suite</title>
     <link rel="stylesheet" href="index.css">
-    <script src="../tails.js" type="module"></script>
+    <script src="tails.js" type="module"></script>
 </head>
 
 <body class="bg-gray-100 text-gray-900 min-h-screen"> <!-- Header -->
@@ -16,14 +16,14 @@
                     <h1 class="text-4xl font-bold text-blue-600 mb-2">TailsJS Complete Test Suite</h1>
                     <p class="text-gray-600">Comprehensive Tailwind CSS clone - Testing all utilities & features</p>
                 </div>                <nav class="flex gap-4">
-                    <a href="plugin-animation.html"
+                    <a href="pages/plugin-animation.html"
                         class="px-4 py-2 bg-purple-500 text-white rounded hover:bg-purple-600 transition duration-200 text-sm font-medium">
                         🎬 Animations
-                    </a>                    <a href="plugin-icons.html"
+                    </a>                    <a href="pages/plugin-icons.html"
                         class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition duration-200 text-sm font-medium">
                         🎨 Icons
                     </a>
-                    <a href="plugin-simple-components.html"
+                    <a href="pages/plugin-simple-components.html"
                         class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition duration-200 text-sm font-medium">
                         🧩 Components
                     </a>
