--- a/pages/plugin-animation.html
+++ b/pages/plugin-animation.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TailsJS - Animation Plugin Test</title>    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>TailsJS - Animation Plugin Test</title>    <link rel="stylesheet" href="../index.css">
     <script src="../tails.js" type="module"></script>
     <script src="../plugins/plugin-animation.js" type="module"></script>
 </head>
@@ -18,7 +17,7 @@
                     <h1 class="text-4xl font-bold text-blue-600 mb-2">TailsJS Animation Plugin</h1>
                     <p class="text-gray-600">Comprehensive animation utilities for modern web interfaces</p>
                 </div>                <nav class="flex gap-4">
-                    <a href="index.html"
+                    <a href="../index.html"
                         class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition duration-200">←
                         Back to Main</a>                    <a href="plugin-icons.html"
                         class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition duration-200">🎨
@@ -513,7 +512,7 @@
         <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
             <p>TailsJS Animation Plugin - Comprehensive animation utilities for modern web development</p>
             <div class="mt-4">
-                <a href="index.html" class="text-blue-600 hover:text-blue-800 transition">← Back to Main Test Suite</a>
+                <a href="../index.html" class="text-blue-600 hover:text-blue-800 transition">← Back to Main Test Suite</a>
             </div>
         </div>
     </footer>
