--- a/pages/plugin-icons.html
+++ b/pages/plugin-icons.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TailsJS - Icons Plugin Test</title>    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>TailsJS - Icons Plugin Test</title>    <link rel="stylesheet" href="../index.css">
     <script src="../tails.js" type="module"></script>
     <script src="../plugins/plugin-icons.js" type="module"></script>
 </head>
@@ -15,9 +14,8 @@
                 <div>
                     <h1 class="text-4xl font-bold text-blue-600 mb-2">TailsJS Icons Plugin</h1>
                     <p class="text-gray-600">Comprehensive Unicode/Emoji icon utilities for modern interfaces</p>
-                </div>                <nav class="flex gap-4">
-                    <a href="index.html" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition duration-200">← Back to Main</a>
-                    <a href="animation.html" class="px-4 py-2 bg-purple-500 text-white rounded hover:bg-purple-600 transition duration-200">🎬 Animations</a>
+                </div>                <nav class="flex gap-4">                    <a href="../index.html" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition duration-200">← Back to Main</a>
+                    <a href="plugin-animation.html" class="px-4 py-2 bg-purple-500 text-white rounded hover:bg-purple-600 transition duration-200">🎬 Animations</a>
                     <a href="plugin-simple-components.html" class="px-4 py-2 bg-indigo-500 text-white rounded hover:bg-indigo-600 transition duration-200">🧩 Components</a>
                 </nav>
             </div>
@@ -675,9 +673,8 @@
     <footer class="bg-white border-t mt-12 py-8">
         <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
             <p>TailsJS Icons Plugin - Comprehensive Unicode/Emoji icon utilities for modern web development</p>
-            <div class="mt-4 space-x-4">
-                <a href="index.html" class="text-blue-600 hover:text-blue-800 transition">← Back to Main Test Suite</a>
-                <a href="animation.html" class="text-purple-600 hover:text-purple-800 transition">🎬 View Animations</a>
+            <div class="mt-4 space-x-4">                <a href="../index.html" class="text-blue-600 hover:text-blue-800 transition">← Back to Main Test Suite</a>
+                <a href="plugin-animation.html" class="text-purple-600 hover:text-purple-800 transition">🎬 View Animations</a>
             </div>
         </div>
     </footer>    <script>
